@@ -17,38 +17,23 @@
 
 package com.limemojito.aws.cleaner.resource;
 
-import com.amazonaws.services.elasticache.AmazonElastiCache;
-import com.amazonaws.services.elasticache.model.CacheCluster;
-import com.amazonaws.services.elasticache.model.DeleteCacheClusterRequest;
-import com.amazonaws.services.elasticache.model.DescribeCacheClustersResult;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import software.amazon.awssdk.services.elasticache.ElastiCacheClient;
+import software.amazon.awssdk.services.elasticache.model.CacheCluster;
 
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 /**
  * Resource cleaner for AWS ElastiCache clusters.
  * This cleaner identifies and deletes ElastiCache clusters that are in "available" state.
  */
 @Service
+@Slf4j
+@RequiredArgsConstructor
 public class ElasticacheResourceCleaner extends PhysicalResourceCleaner {
-    private static final Logger LOGGER = LoggerFactory.getLogger(ElasticacheResourceCleaner.class);
-    private final AmazonElastiCache client;
-
-    /**
-     * Constructs a new ElasticacheResourceCleaner.
-     *
-     * @param client The AWS ElastiCache client
-     */
-    @Autowired
-    public ElasticacheResourceCleaner(AmazonElastiCache client) {
-        super();
-        this.client = client;
-    }
+    private final ElastiCacheClient client;
 
     /**
      * {@inheritDoc}
@@ -58,13 +43,13 @@ public class ElasticacheResourceCleaner extends PhysicalResourceCleaner {
      */
     @Override
     protected List<String> getPhysicalResourceIds() {
-        DescribeCacheClustersResult results = client.describeCacheClusters();
-        final List<CacheCluster> cacheClusters = results.getCacheClusters();
-        LOGGER.debug("Found {} clusters", cacheClusters.size());
-        return cacheClusters.stream()
-                            .filter(cacheCluster -> ("available".equals(cacheCluster.getCacheClusterStatus())))
-                            .map(CacheCluster::getCacheClusterId)
-                            .collect(toList());
+        log.debug("Getting all physical resource ids");
+        return client.describeCacheClustersPaginator()
+                     .stream()
+                     .flatMap(p -> p.cacheClusters().stream())
+                     .filter(cacheCluster -> ("available".equals(cacheCluster.cacheClusterStatus())))
+                     .map(CacheCluster::cacheClusterId)
+                     .toList();
     }
 
     /**
@@ -75,7 +60,7 @@ public class ElasticacheResourceCleaner extends PhysicalResourceCleaner {
      */
     @Override
     protected void performDelete(String physicalId) {
-        LOGGER.info("Deleting cache {}", physicalId);
-        client.deleteCacheCluster(new DeleteCacheClusterRequest(physicalId));
+        log.info("Deleting cache {}", physicalId);
+        client.deleteCacheCluster(r -> r.cacheClusterId(physicalId));
     }
 }
